# startling-lib

./: .gitignore  .pypirc  README.md  makefile  note.txt  pyproject.toml  pytest.ini  requiremenents.txt
.github/workflows/: test.yaml
startling_lib/: __init__.py
startling_lib/competence/: __init__.py  competence.py
startling_lib/engineering/: __init__.py  engineering_ai.py
tests/: README.md
tests/unit/: test_competence.py  test_engineering.py
