[project]
name = "startling-lib"
version = "0.1.1"
description = "Une bibliothèque minimale faite par startlingadama"
authors = [{ name = "Adama Coulibaly", email = "startlingadama@email.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/startlingadama/startling-lib.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
